--- a/PhishOD/AGMediaPlayer/AGMediaPlayerViewController.xib
+++ b/PhishOD/AGMediaPlayer/AGMediaPlayerViewController.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AGMediaPlayerViewController">
@@ -113,6 +112,7 @@
                                 <action selector="seekingEndedInside:" destination="-1" eventType="touchUpInside" id="C9v-lR-Cej"/>
                                 <action selector="seekingEndedOutside:" destination="-1" eventType="touchUpOutside" id="mWi-rX-7wi"/>
                                 <action selector="seekingStarted:" destination="-1" eventType="touchDown" id="oKJ-ll-gL5"/>
+                                <action selector="seekingValueChanged:" destination="-1" eventType="valueChanged" id="SQy-a4-XuW"/>
                             </connections>
                         </slider>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-37:48" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ULs-jx-4CJ" userLabel="Time left">
@@ -162,7 +162,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <nil key="simulatedStatusBarMetrics"/>
         </view>
     </objects>
     <resources>
@@ -174,4 +174,9 @@
         <image name="glyphicons_176_forward.png" width="23" height="18"/>
         <image name="glyphicons_184_volume_up.png" width="24" height="26"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
